<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Filtros de búsqueda -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/isColdCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cold" />

        <CheckBox
            android:id="@+id/isCaldosoCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caldoso"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/isSaltyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salty"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/cuisineEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cuisine"
        android:inputType="text"
        android:autofillHints="cuisine"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_format"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/newSearchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_search"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />
</LinearLayout>
